--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,86 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+.bmad-core/agent-teams/team-all.yml
+.bmad-core/agent-teams/team-fullstack.yml
+.bmad-core/agent-teams/team-ide-minimal.yml
+.bmad-core/agent-teams/team-no-ui.yml
+.bmad-core/agents/analyst.md
+.bmad-core/agents/architect.md
+.bmad-core/agents/bmad-master.md
+.bmad-core/agents/bmad-orchestrator.md
+.bmad-core/agents/dev.md
+.bmad-core/agents/pm.md
+.bmad-core/agents/po.md
+.bmad-core/agents/qa.md
+.bmad-core/agents/sm.md
+.bmad-core/agents/ux-expert.md
+.bmad-core/checklists/architect-checklist.md
+.bmad-core/checklists/change-checklist.md
+.bmad-core/checklists/pm-checklist.md
+.bmad-core/checklists/po-master-checklist.md
+.bmad-core/checklists/story-dod-checklist.md
+.bmad-core/checklists/story-draft-checklist.md
+.bmad-core/core-config.yml
+.bmad-core/data/bmad-kb.md
+.bmad-core/data/technical-preferences.md
+.bmad-core/install-manifest.yml
+.bmad-core/tasks/advanced-elicitation.md
+.bmad-core/tasks/brainstorming-techniques.md
+.bmad-core/tasks/brownfield-create-epic.md
+.bmad-core/tasks/brownfield-create-story.md
+.bmad-core/tasks/core-dump.md
+.bmad-core/tasks/correct-course.md
+.bmad-core/tasks/create-deep-research-prompt.md
+.bmad-core/tasks/create-doc.md
+.bmad-core/tasks/create-next-story.md
+.bmad-core/tasks/doc-migration-task.md
+.bmad-core/tasks/document-project.md
+.bmad-core/tasks/execute-checklist.md
+.bmad-core/tasks/generate-ai-frontend-prompt.md
+.bmad-core/tasks/index-docs.md
+.bmad-core/tasks/kb-mode-interaction.md
+.bmad-core/tasks/review-story.md
+.bmad-core/tasks/shard-doc.md
+.bmad-core/templates/architecture-tmpl.md
+.bmad-core/templates/brownfield-architecture-tmpl.md
+.bmad-core/templates/brownfield-prd-tmpl.md
+.bmad-core/templates/competitor-analysis-tmpl.md
+.bmad-core/templates/front-end-architecture-tmpl.md
+.bmad-core/templates/front-end-spec-tmpl.md
+.bmad-core/templates/fullstack-architecture-tmpl.md
+.bmad-core/templates/market-research-tmpl.md
+.bmad-core/templates/prd-tmpl.md
+.bmad-core/templates/project-brief-tmpl.md
+.bmad-core/templates/story-tmpl.md
+.bmad-core/utils/file-resolution-context.md
+.bmad-core/utils/template-format.md
+.bmad-core/utils/web-agent-startup-instructions.md
+.bmad-core/utils/workflow-management.md
+.bmad-core/workflows/brownfield-fullstack.yml
+.bmad-core/workflows/brownfield-service.yml
+.bmad-core/workflows/brownfield-ui.yml
+.bmad-core/workflows/greenfield-fullstack.yml
+.bmad-core/workflows/greenfield-service.yml
+.bmad-core/workflows/greenfield-ui.yml
+.cursor/rules/analyst.mdc
+.cursor/rules/architect.mdc
+.cursor/rules/bmad-master.mdc
+.cursor/rules/bmad-orchestrator.mdc
+.cursor/rules/dev.mdc
+.cursor/rules/pm.mdc
+.cursor/rules/po.mdc
+.cursor/rules/qa.mdc
+.cursor/rules/sm.mdc
+.cursor/rules/ux-expert.mdc
+.gemini/agents/analyst.md
+.gemini/agents/architect.md
+.gemini/agents/bmad-master.md
+.gemini/agents/bmad-orchestrator.md
+.gemini/agents/dev.md
+.gemini/agents/pm.md
+.gemini/agents/po.md
+.gemini/agents/qa.md
+.gemini/agents/sm.md
+.gemini/agents/ux-expert.md
+.gemini/settings.json
